# rules_nodejs_rollup_commonjs_bundle

./: BUILD.bazel  README.md  WORKSPACE  package.json
src/commonjs/: BUILD.bazel  index.js
src/es6/: BUILD.bazel  index.js
tools/: bazel.rc
